developマージ時に壊れたファイルを修正